--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
     <string name="default_notification_channel_id" translatable="false">Notification</string>
     <string name="enter_the_category_name">Enter the Category name</string>
     <string name="enter_the_sport_name">Enter the Sport name</string>
+    <string name="time">time</string>
 
 </resources>
