--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -48,4 +48,5 @@
     <string name="restor_your_password">استعادة كلمة المرور الخاصة بك</string>
     <string name="enter_the_category_name">أدخل اسم الفئة</string>
     <string name="enter_the_sport_name">أدخل اسم الرياضة</string>
+    <string name="time">الوقت</string>
 </resources>
